# Rust_server_with_oAuth_and_whores

./: .env  Cargo.toml
migrations/2022-04-16-160306_users/: up.sql
src/: main.rs  models.rs  routes.rs  schema.rs
